--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,7 +18,7 @@ build:
 after_build:
 - cmd: >-
 
-    dotnet test ./DocsByReflection.UnitTests
+    #dotnet test ./DocsByReflection.UnitTests
 
     mkdir .\src\nuget
 
